fixed search on mobile devices

--- a/styleHome.css
+++ b/styleHome.css
@@ -81,6 +81,7 @@ input[type="search"]::-webkit-search-results-decoration {
   background: transparent;
   width: 0px;
   height: 0px;
+  padding: 0px;
 }
 
 .opened {
